Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <h3>
 <a id="baltoro-climbing-centre" class="anchor" href="#baltoro-climbing-centre" aria-hidden="true"><span class="octicon octicon-link"></span></a>Baltoro climbing centre</h3>
 
-<p>Baltoro climbing centre is the biggest climbing wall in Rzeszów. Here you can find <a href="http://baltoro.rzeszow.pl">wall webpage</a>. Wall you can find on <a href="https://www.google.pl/maps/place/BALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego/@50.06248,21.978297,17z/data=!4m6!1m3!3m2!1s0x473cfb4343d2cfe9:0x3566f03652031062!2sBALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego!3m1!1s0x473cfb4343d2cfe9:0x3566f03652031062?hl=pl">Google Maps</a>. Unfortunately there is no English version and webpage is not always up to date so you should look for more details on <a href="https://www.facebook.com/CentrumWspinaczkoweBaltoroWRzeszowie">Facebook</a>. Wall offer nice bouldering possibilities, rope climbing and a lot of training accessories like Bachar ladder or campus.</p>
+<p>Baltoro climbing centre is the biggest climbing wall in Rzeszów. Here you can find <a href="http://baltoro.rzeszow.pl">wall webpage</a>. Wall you can find on <a href="https://www.google.pl/maps/place/BALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego/@50.06248,21.978297,17z/data=!4m6!1m3!3m2!1s0x473cfb4343d2cfe9:0x3566f03652031062!2sBALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego!3m1!1s0x473cfb4343d2cfe9:0x3566f03652031062?hl=pl">Google Maps</a>. Unfortunately there is no English version and webpage is not always up to date so you should look for more details on <a href="https://www.facebook.com/CentrumWspinaczkoweBaltoroWRzeszowie">Facebook</a>. Wall offers nice bouldering possibilities, rope climbing and a lot of training accessories like Bachar ladder or campus.</p>
 
 <h3>
 <a id="climbing-wall-near-rzeszów-university" class="anchor" href="#climbing-wall-near-rzesz%C3%B3w-university" aria-hidden="true"><span class="octicon octicon-link"></span></a>Climbing wall near Rzeszów University</h3>
@@ -63,9 +63,9 @@
 <p>Climbing wall has no webpage for more info you should visit <a href="https://www.facebook.com/sciankaUR">Facebook</a>. It's hard to say when wall is open. Schedule is not published and you should probably ask using Facebook. Wall is generally vertical (no overhang) and offers rope climbing. Climbing wall on <a href="https://www.google.pl/maps/place/Jana+Kasprowicza+1,+Rzesz%C3%B3w/@50.0419385,21.9938766,218m/data=!3m1!1e3!4m2!3m1!1s0x473cfb0f88142543:0x2edbe7b9eb4be4e0!6m1!1e1?hl=pl">Google Maps</a>.</p>
 
 <h3>
-<a id="additional-info" class="anchor" href="#additional-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>Additional info</h3>
+<a id="more-info" class="anchor" href="#more-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>More info</h3>
 
-<p>All the time you can ask me about more details. On <a href="http://lojant.idl.pl">my webpage</a> you can find email that’s the best way to contact me.</p>
+<p>Do not hesitate to ask me about more details. On <a href="http://lojant.idl.pl">my webpage</a> you can find email that’s the best way to contact me.</p>
 
 <h3>
 <a id="mistakes" class="anchor" href="#mistakes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mistakes</h3>
