--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="google-site-verification" content="TxbqJrnf5yOW8CLJ_aWVmc3CDXBb4fze-TLGVwrZknU" />
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
@@ -22,11 +23,11 @@
           <h2>Where you can climb in Rzeszów?</h2>
         </header>
 
-        <section id="downloads" class="clearfix">
+        <!--section id="downloads" class="clearfix">
           <a href="https://github.com/dominikhajduk/climbing-in-rzeszow/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/dominikhajduk/climbing-in-rzeszow/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/dominikhajduk/climbing-in-rzeszow" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
+        </section-->
 
         <hr>
 
