Add link to open PR

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <h3>
 <a id="mistakes" class="anchor" href="#mistakes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mistakes</h3>
 
-<p>If you find any mistake or want propose update please let me know. Feel free to open issue for this repository.</p>
+<p>If you find any mistake or want propose update please let me know. <a href="https://github.com/dominikhajduk/climbing-in-rzeszow/issues/new">Feel free to open issue for this repository</a>.</p>
 
 <p>Keep climbing!</p>
         </section>
