--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h3>
 <a id="idea-for-this-page" class="anchor" href="#idea-for-this-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Idea for this page</h3>
 
-<p>Here I want collect information about places where you can climb in Rzeszów (Poland).  </p>
+<p>Here I want collect information in English about places where you can climb in Rzeszów (Poland).  </p>
 
 <h3>
 <a id="indoor-climbing" class="anchor" href="#indoor-climbing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Indoor climbing</h3>
@@ -44,24 +44,24 @@
 
 <ul>
 <li>Climbing Wall near Technical University</li>
-<li>Baltoro climbing centre</li>
+<li>Baltoro Climbing Centre</li>
 <li>Climbing wall near Rzeszów University</li>
 </ul>
 
 <h3>
 <a id="climbing-wall-near-technical-university-politechnika-rzeszowska" class="anchor" href="#climbing-wall-near-technical-university-politechnika-rzeszowska" aria-hidden="true"><span class="octicon octicon-link"></span></a>Climbing wall near Technical University (Politechnika Rzeszowska)</h3>
 
-<p>Climbing wall has <a href="http://sciana.prz.rzeszow.pl/english.php">webpage</a> also main info are presented in English. Climbing wall you can find on <a href="http://sciana.prz.rzeszow.pl/jak_dojechac.php">Google Maps</a>. Wall is open from October to June. During Holidays wall is generally closed. Exact days and hours are marked in the schedule. If schedule is empty, wall is probably closed. Wall offers mostly top rope and lead climbing with rope but you can find some place for bouldering.</p>
+<p>Climbing wall has <a href="http://sciana.prz.rzeszow.pl/english.php">webpage</a> also main <a href="http://sciana.prz.rzeszow.pl/english.php">info are presented in English</a>. Climbing wall you can find on <a href="http://sciana.prz.rzeszow.pl/jak_dojechac.php">Google Maps</a>. Wall is open from October to June. During Holidays wall is generally closed. Exact days and hours are marked in the schedule. If schedule is empty, wall is probably closed. Wall offers mostly top rope and lead climbing with rope but you can find also some place for bouldering.</p>
 
 <h3>
-<a id="baltoro-climbing-centre" class="anchor" href="#baltoro-climbing-centre" aria-hidden="true"><span class="octicon octicon-link"></span></a>Baltoro climbing centre</h3>
+<a id="baltoro-climbing-centre" class="anchor" href="#baltoro-climbing-centre" aria-hidden="true"><span class="octicon octicon-link"></span></a>Baltoro Climbing Centre</h3>
 
 <p>Baltoro climbing centre is the biggest climbing wall in Rzeszów. Here you can find <a href="http://baltoro.rzeszow.pl">wall webpage</a>. Wall you can find on <a href="https://www.google.pl/maps/place/BALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego/@50.06248,21.978297,17z/data=!4m6!1m3!3m2!1s0x473cfb4343d2cfe9:0x3566f03652031062!2sBALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego!3m1!1s0x473cfb4343d2cfe9:0x3566f03652031062?hl=pl">Google Maps</a>. Unfortunately there is no English version and webpage is not always up to date so you should look for more details on <a href="https://www.facebook.com/CentrumWspinaczkoweBaltoroWRzeszowie">Facebook</a>. Wall offers nice bouldering possibilities, rope climbing and a lot of training accessories like Bachar ladder or campus.</p>
 
 <h3>
 <a id="climbing-wall-near-rzeszów-university" class="anchor" href="#climbing-wall-near-rzesz%C3%B3w-university" aria-hidden="true"><span class="octicon octicon-link"></span></a>Climbing wall near Rzeszów University</h3>
 
-<p>Climbing wall has no webpage for more info you should visit <a href="https://www.facebook.com/sciankaUR">Facebook</a>. It's hard to say when wall is open. Schedule is not published and you should probably ask using Facebook. Wall is generally vertical (no overhang) and offers rope climbing. Climbing wall on <a href="https://www.google.pl/maps/place/Jana+Kasprowicza+1,+Rzesz%C3%B3w/@50.0419385,21.9938766,218m/data=!3m1!1e3!4m2!3m1!1s0x473cfb0f88142543:0x2edbe7b9eb4be4e0!6m1!1e1?hl=pl">Google Maps</a>.</p>
+<p>Climbing wall has no webpage. For more info you should visit <a href="https://www.facebook.com/sciankaUR">Facebook</a>. It's hard to say when wall is open. Schedule is not published and you should probably ask using Facebook. Wall is generally vertical (no overhang) and offers rope climbing. Climbing wall on <a href="https://www.google.pl/maps/place/Jana+Kasprowicza+1,+Rzesz%C3%B3w/@50.0419385,21.9938766,218m/data=!3m1!1e3!4m2!3m1!1s0x473cfb0f88142543:0x2edbe7b9eb4be4e0!6m1!1e1?hl=pl">Google Maps</a>.</p>
 
 <h3>
 <a id="more-info" class="anchor" href="#more-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>More info</h3>
@@ -69,7 +69,7 @@
 <p>Do not hesitate to ask me about more details. On <a href="http://lojant.idl.pl">my webpage</a> you can find email that’s the best way to contact me.</p>
 
 <h3>
-<a id="mistakes" class="anchor" href="#mistakes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mistakes</h3>
+<a id="mistakes" class="anchor" href="#mistakes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mistakes & updates</h3>
 
 <p>If you find any mistake or want propose update please let me know. <a href="https://github.com/dominikhajduk/climbing-in-rzeszow/issues/new">Feel free to open issue for this repository</a>.</p>
 
