--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Climbing in Rzeszów by dominikhajduk</title>
+    <title>Climbing in Rzeszów</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
                 <a id="indoor-climbing" class="anchor" href="#indoor-climbing" aria-hidden="true"><span
                         class="octicon octicon-link"></span></a>Indoor climbing</h2>
 
-            <p>In Rzeszów there are three main climbing walls:</p>
+            <p>In Rzeszów there are three public open indoor climbing walls:</p>
 
             <ul>
                 <li>Climbing Wall near Technical University</li>
@@ -42,22 +42,22 @@
                 <li>Climbing wall near Rzeszów University</li>
             </ul>
 
-            <h2>
+            <h3>
                 <a id="climbing-wall-near-technical-university-politechnika-rzeszowska" class="anchor"
                    href="#climbing-wall-near-technical-university-politechnika-rzeszowska" aria-hidden="true"><span
                         class="octicon octicon-link"></span></a>Climbing wall near Technical University (Politechnika
-                Rzeszowska)</h2>
+                Rzeszowska)</h3>
 
             <p>Climbing wall has <a href="http://sciana.prz.rzeszow.pl/english.php">webpage</a> also main <a
                     href="http://sciana.prz.rzeszow.pl/english.php">info are presented in English</a>. Climbing wall you
                 can find on <a href="http://sciana.prz.rzeszow.pl/jak_dojechac.php">Google Maps</a>. Wall is open from
-                October to June. During Holidays wall is generally closed. Exact days and hours are marked in the
+                October to June. During summer Holidays wall is generally closed. Exact days and hours are marked in the
                 schedule. If schedule is empty, wall is probably closed. Wall offers mostly top rope and lead climbing
                 with rope but you can find also some place for bouldering.</p>
 
-            <h2>
+            <h3>
                 <a id="baltoro-climbing-centre" class="anchor" href="#baltoro-climbing-centre" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>Baltoro Climbing Centre</h2>
+                        class="octicon octicon-link"></span></a>Baltoro Climbing Centre</h3>
 
             <p>Baltoro climbing centre is the biggest climbing wall in Rzeszów. Here you can find <a
                     href="http://baltoro.rzeszow.pl">wall webpage</a>. Wall you can find on <a
@@ -65,12 +65,12 @@
                 Maps</a>. Unfortunately there is no English version and webpage is not always up to date so you should
                 look for more details on <a href="https://www.facebook.com/CentrumWspinaczkoweBaltoroWRzeszowie">Facebook</a>.
                 Wall offers nice bouldering possibilities, rope climbing and a lot of training accessories like Bachar
-                ladder or campus.</p>
+                ladder or campus, system wall.</p>
 
-            <h2>
+            <h3>
                 <a id="climbing-wall-near-rzeszów-university" class="anchor"
                    href="#climbing-wall-near-rzesz%C3%B3w-university" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>Climbing wall near Rzeszów University</h2>
+                        class="octicon octicon-link"></span></a>Climbing wall near Rzeszów University</h3>
 
             <p>Climbing wall has no webpage. For more info you should visit <a
                     href="https://www.facebook.com/sciankaUR">Facebook</a>. It's hard to say when wall is open. Schedule
@@ -113,7 +113,6 @@
             } catch (err) {
             }
         </script>
-
     </div>
 </div>
 </body>
