--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -8,16 +8,12 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <title>Climbing in Rzeszów</title>
 </head>
 
 <body>
 <div id="container">
     <div class="inner">
-
         <header>
             <h1>Climbing in Rzeszów</h1>
             <h2>Where can you climb in Rzeszów?</h2>
@@ -26,13 +22,15 @@
         <section id="main_content">
             <h2>
                 <a id="idea-for-this-page" class="anchor" href="#idea-for-this-page" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>Idea for this page</h2>
+                            class="octicon octicon-link"></span></a>Idea for this page</h2>
 
             <p>Here I want collect information in English about places where you can climb in Rzeszów (Poland). </p>
 
             <h2>
-                <a id="indoor-climbing" class="anchor" href="#indoor-climbing" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>Indoor climbing</h2>
+                <a id="indoor-climbing" class="anchor" href="#indoor-climbing" aria-hidden="true">
+                    <span class="octicon octicon-link"></span>
+                </a>Indoor climbing
+            </h2>
 
             <p>In Rzeszów there are three public open indoor climbing walls:</p>
 
@@ -45,24 +43,28 @@
             <h3>
                 <a id="climbing-wall-near-technical-university-politechnika-rzeszowska" class="anchor"
                    href="#climbing-wall-near-technical-university-politechnika-rzeszowska" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>The climbing wall near Technical University (Politechnika
-                Rzeszowska)</h3>
+                            class="octicon octicon-link"></span>
+                </a>The climbing wall near Technical University (Politechnika Rzeszowska)
+            </h3>
 
             <p>Climbing wall has <a href="http://sciana.prz.rzeszow.pl/english.php">webpage</a> also main <a
-                    href="http://sciana.prz.rzeszow.pl/english.php">info is presented in English</a>. The climbing wall you
+                        href="http://sciana.prz.rzeszow.pl/english.php">info is presented in English</a>. The climbing
+                wall you
                 can find on <a href="http://sciana.prz.rzeszow.pl/jak_dojechac.php">Google Maps</a>. Wall is open from
                 October to June. During summer Holidays wall is generally closed. Exact days and hours are marked on the
-                schedule. If the schedule is empty, wall is probably closed. Wall offers mostly top rope and lead climbing
+                schedule. If the schedule is empty, wall is probably closed. Wall offers mostly top rope and lead
+                climbing
                 with rope but you can find also some place for bouldering.</p>
 
             <h3>
                 <a id="baltoro-climbing-centre" class="anchor" href="#baltoro-climbing-centre" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>Baltoro Climbing Centre</h3>
+                            class="octicon octicon-link"></span></a>Baltoro Climbing Centre</h3>
 
             <p>Baltoro climbing centre is the biggest climbing wall in Rzeszów. Here you can find <a
-                    href="http://baltoro.rzeszow.pl">wall webpage</a>. Wall you can find on <a
-                    href="https://www.google.pl/maps/place/BALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego/@50.06248,21.978297,17z/data=!4m6!1m3!3m2!1s0x473cfb4343d2cfe9:0x3566f03652031062!2sBALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego!3m1!1s0x473cfb4343d2cfe9:0x3566f03652031062?hl=pl">Google
-                Maps</a>. Unfortunately, there is no English version and webpage is not always up to date so you should
+                        href="http://baltoro.rzeszow.pl">wall webpage</a>. Wall you can find on <a
+                        href="https://www.google.pl/maps/place/BALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego/@50.06248,21.978297,17z/data=!4m6!1m3!3m2!1s0x473cfb4343d2cfe9:0x3566f03652031062!2sBALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego!3m1!1s0x473cfb4343d2cfe9:0x3566f03652031062?hl=pl">Google
+                    Maps</a>. Unfortunately, there is no English version and webpage is not always up to date so you
+                should
                 look for more details on <a href="https://www.facebook.com/CentrumWspinaczkoweBaltoroWRzeszowie">Facebook</a>.
                 Wall offers nice bouldering possibilities, rope climbing and a lot of training accessories like Bachar
                 ladder or campus, system wall.</p>
@@ -70,10 +72,11 @@
             <h3>
                 <a id="climbing-wall-near-rzeszów-university" class="anchor"
                    href="#climbing-wall-near-rzesz%C3%B3w-university" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>Climbing wall near Rzeszów University</h3>
+                            class="octicon octicon-link"></span></a>Climbing wall near Rzeszów University</h3>
 
             <p>The climbing wall has no webpage. For more info you should visit <a
-                    href="https://www.facebook.com/sciankaUR">Facebook</a>. It's hard to say when the wall is open. The schedule
+                        href="https://www.facebook.com/sciankaUR">Facebook</a>. It's hard to say when the wall is open.
+                The schedule
                 is not published and you should probably ask using Facebook. Wall is generally vertical (no overhang)
                 and offers rope climbing. Climbing wall on <a
                         href="https://www.google.pl/maps/place/Jana+Kasprowicza+1,+Rzesz%C3%B3w/@50.0419385,21.9938766,218m/data=!3m1!1e3!4m2!3m1!1s0x473cfb0f88142543:0x2edbe7b9eb4be4e0!6m1!1e1?hl=pl">Google
@@ -81,32 +84,33 @@
 
             <h2>
                 <a id="more-info" class="anchor" href="#more-info" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>More info</h2>
+                            class="octicon octicon-link"></span></a>More info</h2>
 
             <p>Do not hesitate to ask me for more details. On <a href="http://lojant.idl.pl">my webpage</a> you can
                 find the email that’s the best way to contact me.</p>
 
             <h2>
                 <a id="mistakes" class="anchor" href="#mistakes" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>Mistakes & updates</h2>
+                            class="octicon octicon-link"></span></a>Mistakes &amp; updates</h2>
 
             <p>If you find any mistake or want propose update please let me know. <a
-                    href="https://github.com/dominikhajduk/climbing-in-rzeszow/issues/new">Feel free to open issue for
-                this repository</a>.</p>
+                        href="https://github.com/dominikhajduk/climbing-in-rzeszow/issues/new">Feel free to open issue
+                    for
+                    this repository</a>.</p>
 
             <p>Keep on climbing!</p>
         </section>
 
         <footer>
-            Climbing in Rzeszów is maintained by <a href="https://github.com/dominikhajduk">dominikhajduk</a><br>Tactile
-            theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.
+            <p>Climbing in Rzeszów is maintained by <a href="https://github.com/dominikhajduk">dominikhajduk</a></p>
+            <p>Tactile theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.</p>
         </footer>
 
-        <script type="text/javascript">
+        <script>
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
         </script>
-        <script type="text/javascript">
+        <script>
             try {
                 var pageTracker = _gat._getTracker("UA-68010837-1");
                 pageTracker._trackPageview();
