--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
             <p>Keep on climbing!</p>
         </section>
 
-        <footer>
-            <p>Climbing in Rzeszów is maintained by <a href="https://github.com/dominikhajduk">dominikhajduk</a></p>
-            <p>Tactile theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.</p>
+        <footer>Climbing in Rzeszów is maintained by <a href="https://github.com/dominikhajduk">dominikhajduk</a>
+            Tactile theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.
         </footer>
 
         <script>
