--- a/index.html
+++ b/index.html
@@ -105,16 +105,15 @@
             Tactile theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.
         </footer>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-68010837-1"></script>
         <script>
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-        <script>
-            try {
-                var pageTracker = _gat._getTracker("UA-68010837-1");
-                pageTracker._trackPageview();
-            } catch (err) {
-            }
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-68010837-1');
+          ga('set', 'anonymizeIp', true);
         </script>
     </div>
 </div>
