--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a id="idea-for-this-page" class="anchor" href="#idea-for-this-page" aria-hidden="true"><span
                             class="octicon octicon-link"></span></a>Idea for this page</h2>
 
-            <p>Here I want collect information in English about places where you can climb in Rzeszów (Poland). </p>
+            <p>Here we want to collect information in English about places where you can climb in Rzeszów (Poland). </p>
 
             <h2>
                 <a id="indoor-climbing" class="anchor" href="#indoor-climbing" aria-hidden="true">
@@ -35,7 +35,7 @@
             <p>In Rzeszów there are three public open indoor climbing walls:</p>
 
             <ul>
-                <li><a href="#climbing-wall-near-technical-university-politechnika-rzeszowska">Climbing Wall near
+                <li><a href="#climbing-wall-near-technical-university-politechnika-rzeszowska">Climbing Walls near
                         Technical University</a></li>
                 <li><a href="#baltoro-climbing-centre">Baltoro Climbing Centre</a></li>
                 <li><a href="#climbing-wall-near-rzeszow-university">Climbing wall near Rzeszów University</a></li>
