Adjust baltoro info

--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
                             class="octicon octicon-link"></span></a>Baltoro Climbing Centre</h3>
 
             <p>Baltoro climbing centre is the biggest climbing wall in Rzeszów. Here you can find <a
-                        href="http://baltoro.rzeszow.pl">wall webpage</a>. Wall you can find on <a
+                        href="http://rkw.org.pl/baltoro-rzeszow/">wall website</a>. Wall you can find on <a
                         href="https://www.google.pl/maps/place/BALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego/@50.06248,21.978297,17z/data=!4m6!1m3!3m2!1s0x473cfb4343d2cfe9:0x3566f03652031062!2sBALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego!3m1!1s0x473cfb4343d2cfe9:0x3566f03652031062?hl=pl">Google
-                    Maps</a>. Unfortunately, there is no English version and webpage is not always up to date so you
-                should
-                look for more details on <a href="https://www.facebook.com/CentrumWspinaczkoweBaltoroWRzeszowie">Facebook</a>.
-                Wall offers nice bouldering possibilities, rope climbing and a lot of training accessories like Bachar
+                    Maps</a>. Unfortunately, there is no English version and website is not always up to date so you
+                should look for more details on <a href="https://www.facebook.com/CentrumWspinaczkoweBaltoroWRzeszowie">Facebook</a>.
+                Wall offers great bouldering possibilities, rope climbing and a lot of training accessories like Bachar
                 ladder or campus, system wall.</p>
 
             <h3>
@@ -78,9 +77,8 @@
 
             <p>The climbing wall has no webpage. For more info you should visit <a
                         href="https://www.facebook.com/sciankaUR">Facebook</a>. It's hard to say when the wall is open.
-                The schedule
-                is not published and you should probably ask using Facebook. Wall is generally vertical (no overhang)
-                and offers rope climbing. Climbing wall on <a
+                The schedule is not published and you should probably ask using Facebook. Wall is generally vertical (no
+                overhang) and offers rope climbing. Climbing wall on <a
                         href="https://www.google.pl/maps/place/Jana+Kasprowicza+1,+Rzesz%C3%B3w/@50.0419385,21.9938766,218m/data=!3m1!1e3!4m2!3m1!1s0x473cfb0f88142543:0x2edbe7b9eb4be4e0!6m1!1e1?hl=pl">Google
                     Maps</a>.</p>
 
@@ -90,8 +88,7 @@
 
             <p>If you find any mistake or want propose update please let me know. <a
                         href="https://github.com/dominikhajduk/climbing-in-rzeszow/issues/new">Feel free to open issue
-                    for
-                    this repository</a>.</p>
+                    for this repository</a>.</p>
 
             <p>Keep on climbing!</p>
         </section>
