Fix iinfo about Baltoro wall

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a id="baltoro-climbing-centre" class="anchor" href="#baltoro-climbing-centre" aria-hidden="true"><span
                             class="octicon octicon-link"></span></a>Baltoro Climbing Centre</h3>
 
-            <p>Baltoro climbing centre is the biggest climbing wall in Rzeszów. Here you can find <a
+            <p>Baltoro climbing centre is the biggest boulder climbing wall in Rzeszów. Here you can find <a
                         href="http://rkw.org.pl/baltoro-rzeszow/">wall website</a>. Wall you can find on <a
                         href="https://www.google.pl/maps/place/BALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego/@50.06248,21.978297,17z/data=!4m6!1m3!3m2!1s0x473cfb4343d2cfe9:0x3566f03652031062!2sBALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego!3m1!1s0x473cfb4343d2cfe9:0x3566f03652031062?hl=pl">Google
                     Maps</a>. Unfortunately, there is no English version and website is not always up to date so you
