--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section id="main_content">
             <h2>
                 <a id="idea-for-this-page" class="anchor" href="#idea-for-this-page" aria-hidden="true"><span
-                            class="octicon octicon-link"></span></a>Idea for this page</h2>
+                            class="octicon octicon-link"></span></a>An idea for this page</h2>
 
             <p>Here we want to collect information in English about places where you can climb in Rzeszów (Poland). </p>
 
@@ -48,12 +48,12 @@
                 </a>The climbing walls near Technical University (Politechnika Rzeszowska)
             </h3>
 
-            <p>Technical university offers two climbing walls. Climbing walls have dedicated <a
-                        href="http://sciana.prz.rzeszow.pl/english.php">website</a>, where main <a
+            <p>Technical University offers two climbing walls. Climbing walls have a dedicated <a
+                        href="http://sciana.prz.rzeszow.pl/english.php">website</a>, where the main <a
                         href="http://sciana.prz.rzeszow.pl/english.php">info is presented in English</a>. The climbing
                 walls you can find on <a href="http://sciana.prz.rzeszow.pl/jak_dojechac.php">Google Maps</a>. Walls are
                 open from October to June. During summer Holidays walls are generally closed. Exact days and hours are
-                marked on the schedule. If the schedule is empty, walls are probably closed. Technical university offers
+                marked on the schedule. If the schedule is empty, walls are probably closed. Technical University offers
                 two walls: small and big one. Small wall offers mostly top rope and lead climbing with rope but you can
                 find also some place for bouldering. Big wall offers top rope, lead climbing and speed wall. Some wall
                 related news (in PL) are presented on <a href="https://twitter.com/scianaprz">Twitter</a>.</p>
@@ -75,7 +75,7 @@
                    href="#climbing-wall-near-rzeszow-university" aria-hidden="true"><span
                             class="octicon octicon-link"></span></a>Climbing wall near Rzeszów University</h3>
 
-            <p>The climbing wall has no webpage. For more info you should visit <a
+            <p>The climbing wall has no webpage. For more info, you should visit <a
                         href="https://www.facebook.com/sciankaUR">Facebook</a>. It's hard to say when the wall is open.
                 The schedule is not published and you should probably ask using Facebook. Wall is generally vertical (no
                 overhang) and offers rope climbing. Climbing wall on <a
