--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul>
                 <li><a href="#climbing-wall-near-technical-university-politechnika-rzeszowska">Climbing Walls near
                     Technical University</a></li>
-                <li><a href="#flywall">Flyywall Climbing Centre</a></li>
+                <li><a href="#flywall">Flywall Climbing Centre</a></li>
                 <li><a href="#baltoro-climbing-centre">Baltoro Climbing Centre</a></li>
                 <li><a href="#climbing-wall-near-rzeszow-university">Climbing wall near Rzeszów University</a></li>
             </ul>
