Change flywall website to https

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 kids. Wall is placed on <a href="https://www.google.com/maps/place/50°02'46.6%22N+22°00'55.4%22E">Siemieńskiego
                 14 street</a>. More details you can find on <a
                     href="http://wspinanie.rzeszow.pl/sciany-wspinaczkowe/centrum-wspinaczkowe-flywall/">wspinanie.rzeszow.pl</a>
-                or on <a href="http://www.flywall.pl/">flywall.pl</a>.
+                or on <a href="https://www.flywall.pl/">flywall.pl</a>.
             </p>
 
             <h3>
