Update information about Peron Baltoro

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#climbing-wall-near-technical-university-politechnika-rzeszowska">Climbing Walls near
                     Technical University</a></li>
                 <li><a href="#flywall">Flywall Climbing Centre</a></li>
-                <li><a href="#baltoro-climbing-centre">Baltoro Climbing Centre</a></li>
+                <li><a href="#peron-baltoro-climbing-centre">Peron Baltoro Climbing Centre</a></li>
                 <li><a href="#climbing-wall-near-rzeszow-university">Climbing wall near Rzeszów University</a></li>
             </ul>
 
@@ -78,16 +78,17 @@
             </p>
 
             <h3>
-                <a id="baltoro-climbing-centre" class="anchor" href="#baltoro-climbing-centre" aria-hidden="true"><span
-                        class="octicon octicon-link"></span></a>Baltoro Climbing Centre</h3>
+                <a id="peron-baltoro-climbing-centre" class="anchor" href="#peron-baltoro-climbing-centre" aria-hidden="true"><span
+                        class="octicon octicon-link"></span></a>Peron Baltoro Climbing Centre</h3>
 
-            <p>Baltoro climbing centre is the biggest boulder climbing wall in Rzeszów. Here you can find <a
-                    href="http://rkw.org.pl/baltoro-rzeszow/">wall website</a>. Wall you can find on <a
-                    href="https://www.google.pl/maps/place/BALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego/@50.06248,21.978297,17z/data=!4m6!1m3!3m2!1s0x473cfb4343d2cfe9:0x3566f03652031062!2sBALTORO+-+Centrum+Wspinaczkowe+Rzeszowskiego+Klubu+Wysokog%C3%B3rskiego!3m1!1s0x473cfb4343d2cfe9:0x3566f03652031062?hl=pl">Google
-                Maps</a>. Unfortunately, there is no English version and website is not always up to date so you
-                should look for more details on <a href="https://www.facebook.com/CentrumWspinaczkoweBaltoroWRzeszowie">Facebook</a>.
-                Wall offers great bouldering possibilities, rope climbing and a lot of training accessories like Bachar
-                ladder or campus, system wall.</p>
+            <p>Peron Baltoro climbing centre is the biggest boulder wall in Rzeszów. Here you can find <a
+                    href="http://rkw.org.pl/baltoro-rzeszow/">wall website</a>. Wall you can find near Rzeszów main
+                train station (that is name taken from as "peron" mean train platform and Baltoro is taken from previous 
+                wall) on <a href="https://g.page/Peron_Baltoro?share">Google Maps</a>. Unfortunately, there is no English
+                version and website is not always up to date so you should look for more details on
+                <a href="https://www.facebook.com/peronbaltoro.rzeszow/">Facebook</a>. Wall offers great bouldering
+                possibilities and a lot of training accessories like Bachar ladder or campus, system wall. This is the
+                wall of the Rzeszów Mountain Club. Probably the most climatic place to climb in Rzeszów.</p>
 
             <h3>
                 <a id="climbing-wall-near-rzeszow-university" class="anchor"
