Update Flywall info

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
                 that you climb before and you can belay. </p>
 
             <h3>
-                <a id="flywall" class="anchor" href="#baltoro-climbing-centre" aria-hidden="true"><span
+                <a id="flywall" class="anchor" href="#flywall" aria-hidden="true"><span
                         class="octicon octicon-link"></span></a>
                 FlyWall climbing centre
             </h3>
             <p>
                 Flywall is the biggest climbing centre in Rzeszów. It offers traditional rope climbing and boulder wall.
                 There are around 500 square meters of a big wall for rope climbing (both top rope and lead climbing).
-                Wall is 11,5m high. Some lines offer automatic belaying machines (so you can climb top tope without a
-                partner). Boulder wall offers 230 square meters for climbing. There is also a fun climbing wall for
-                kids. Wall is placed on <a href="https://www.google.com/maps/place/50°02'46.6%22N+22°00'55.4%22E">Siemieńskiego
+                Wall is 11,5m high. Some lines offer automatic belaying machines (so you can be an asshole without partner
+                and keep climbin ;) ). Boulder wall offers 250 square meters for climbing. There is also a fun climbing wall for
+                kids and rope courses. Wall is placed on <a href="https://g.page/FlyWall?share">Siemieńskiego
                 14 street</a>. More details you can find on <a
                     href="http://wspinanie.rzeszow.pl/sciany-wspinaczkowe/centrum-wspinaczkowe-flywall/">wspinanie.rzeszow.pl</a>
                 or on <a href="https://www.flywall.pl/">flywall.pl</a>.
