Reword peron baltoro

--- a/index.html
+++ b/index.html
@@ -82,13 +82,15 @@
                         class="octicon octicon-link"></span></a>Peron Baltoro Climbing Centre</h3>
 
             <p>Peron Baltoro climbing centre is the biggest boulder wall in Rzeszów. Here you can find <a
-                    href="http://rkw.org.pl/baltoro-rzeszow/">wall website</a>. Wall you can find near Rzeszów main
-                train station (that is name taken from as "peron" mean train platform and Baltoro is taken from previous 
-                wall) on <a href="https://g.page/Peron_Baltoro?share">Google Maps</a>. Unfortunately, there is no English
-                version and website is not always up to date so you should look for more details on
-                <a href="https://www.facebook.com/peronbaltoro.rzeszow/">Facebook</a>. Wall offers great bouldering
-                possibilities and a lot of training accessories like Bachar ladder or campus, system wall. This is the
-                wall of the Rzeszów Mountain Club. Probably the most climatic place to climb in Rzeszów.</p>
+                    href="http://rkw.org.pl/baltoro-rzeszow/">wall website</a>. The place can be found near Rzeszów main
+                train station (<a href="https://g.page/Peron_Baltoro?share">Google Maps link</a>). The location itself
+                is also a source of the name - "peron" in Polish means "train platform" and "Baltoro" is taken from
+                previous climbing centre wall name. Unfortunately, there is no English version of the website and it is
+                not always up to date, so you should look for more details on
+                <a href="https://www.facebook.com/peronbaltoro.rzeszow/">Facebook</a>. Peron Baltoro offers great
+                bouldering possibilities and a lot of training accessories like Bachar ladder, campus or system wall.
+                The climbing centre belongs to Rzeszów Mountaineering Club. Probably the most climatic place to climb in
+                Rzeszów.</p>
 
             <h3>
                 <a id="climbing-wall-near-rzeszow-university" class="anchor"
