Updated info about flywall

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             </h3>
             <p>
                 Flywall is the biggest climbing centre in Rzeszów. It offers traditional rope climbing and boulder wall.
-                There are around 500 square meters of a big wall for rope climbing (both top rope and lead climbing).
+                There are around 530 square meters of a big wall for rope climbing (both top rope and lead climbing).
                 Wall is 11,5m high. Some lines offer automatic belaying machines (so you can be an asshole without partner
-                and keep climbing ;) ). Boulder wall offers 250 square meters for climbing. There is also a fun climbing wall for
-                kids and rope courses. Wall is placed on <a href="https://g.page/FlyWall?share">Siemieńskiego
-                14 street</a>. More details you can find on <a
+                and keep climbing ;) ). Boulder wall offers 230 square meters for climbing. There is also a fun climbing wall for
+                kids and rope courses. The climbing wall offers courses, classes with an instructor and sections. Wall is placed 
+                on <a href="https://g.page/FlyWall?share">Siemieńskiego 14 street</a>. More details you can find on <a
                     href="http://wspinanie.rzeszow.pl/sciany-wspinaczkowe/centrum-wspinaczkowe-flywall/">wspinanie.rzeszow.pl</a>
                 or on <a href="https://www.flywall.pl/">flywall.pl</a>.
             </p>
