--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         class="octicon octicon-link"></span></a>Peron Baltoro Climbing Centre</h3>
 
             <p>Peron Baltoro climbing centre is the biggest boulder wall in Rzeszów. Here you can find <a
-                    href="http://rkw.org.pl/baltoro-rzeszow/">wall website</a>. The place can be found near Rzeszów main
+                    href="http://rkw.org.pl/peron_baltoro/">wall website</a>. The place can be found near Rzeszów main
                 train station (<a href="https://g.page/Peron_Baltoro?share">Google Maps link</a>). The location itself
                 is also a source of the name - "peron" in Polish means "train platform" and "Baltoro" is taken from
                 previous climbing centre wall name. Unfortunately, there is no English version of the website and it is
